--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ height: 100%;
     align-items: center;
 }
 #center{
-    border: 2px solid red;
+/*     border: 2px solid red; */
     display: flex;
     flex-direction: column;
     max-width: 320px;
