--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ height: 100%;
 #main{
     width: 100%;
     height: 100%;
-    background-color: #EEF0F4;
+    background-color: #FDEEEB;
     display: flex;
     justify-content: center;
     align-items: center;
